--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,10 +13,10 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
-      - name: Set up JDK 11
+      - name: Set up JDK 16
         uses: actions/setup-java@v1
         with:
-          java-version: 11
+          java-version: 16
       - name: Cache SonarCloud packages
         uses: actions/cache@v1
         with:
@@ -31,6 +31,6 @@ jobs:
           restore-keys: ${{ runner.os }}-gradle
       - name: Build and analyze
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.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 }}  # Needed to get PR information, if any
+          SONAR_TOKEN: ${{ secrets.97309ff35f8e6f589c5d3c3b24c92f434dc70280}}
         run: ./gradlew build sonarqube --info
